--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <artifactId>gherkin</artifactId>
             <version>7.0.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
 
     </dependencies>
